Fix course description not visible on Path page.

--- a/src/client/stylus/cards.styl
+++ b/src/client/stylus/cards.styl
@@ -323,6 +323,14 @@
     
 }
 
+.course-card-content {
+    background-color: colorPrimaryLight;
+    border-radius: 6px
+    margin-top:50px;
+    padding-left 10px
+    padding-right 10px
+}
+
 .course-card-caption {
     display: inline-block;
     color: colorTextInverse
